# scorep_substrate_graphviz

./: .travis.yml  0001-Creates-patch-for-CMakeLists.txt-needed-for-building.patch  AUTHORS  CMakeLists.txt  LICENSE  README.md
src/: graphviz.c
